- add a script that packages txt files to a tarball
- add an HTMLWriter that extends Ebookmaker's HTMLWriter to package up a zip file of the html5 with images named pg99999-h.zip Addresses #38
- don't require a sourcefile for products that are built from the database. Require ebbokmaker>0.12.35. Fixes #39.

0.8.6 (May 31, 2023)
- adds MastodonWriter, to replicate TwitterWriter (posting on @gutenberg_new@mastodon.social)

0.8.5 (March 8, 2023)
- normalize capitalization of "eBook"
- only send notification for CRITICAL errors #33

0.8.4 (February 15, 2023)
- notifications, both success and problem alerts, are now sent only to the whitewasher.
- notification texts have been cleaned up to be more readable and more friendly
- refactored  PUBLIC, FILES, FTP into libgutenberg>=0.10.15
- CACHDIR and FILESDIR now need to be set in ~/.ebookmaker as well as ~/.ebookconverter, Probably these belong in an environment variable.


0.8.3 (December 26, 2022)
- added documentation for commands
- add checking that a source file exists
- refactor filesize checking to remove CRITICAL messages when a build is skipped
- update tests

0.8.2 (September 30, 2022)
- Adds UpdateWriter. It scans source files for metadata headers and adds to the database. Currently only looks for 'Credit:' or 'Produced by:'.
- `.xhtml` added to parseable file extensions
- stop producing kindle.noimages unless asked to
- add a "generic" file name for Writers that don't write (Twiter, Facebook, Update)

0.8.1 (September 14, 2022)
- when the html file is large (>16M), in most cases we don't really want to make an EPUB or a MOBI. Making the MOBI can take hours with our current infrastructure. Changed the source file size filters  so these formats are not made.
- when the source EPUBs are >32M, only old-format MOBIs are not made.
- add jekyll script
- stop trying to store qr codes in databaseta from backup workflow files
- add script to load metadata

0.8.0 (August 18, 2022)