@@ -59,3 +59,9 @@ class Writer(BaseHTMLWriter.Writer):
             raise what
         
         info("Done making zip: %s" % job.outputfile)
+        
+        if job.dc.credit:
+            job.dc.add_attribute(job.dc.book, [job.dc.credit], marc=508)
+            job.dc.session.commit()
+            info(f"set credit to db: {job.dc.credit}")
+        
